WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243082
REGRESSION(
252693@main
): ASSERTION FAILED: results.size() == results.capacity() in Interpreter::getStackTrace
https://bugs.webkit.org/show_bug.cgi?id=243082
Summary
REGRESSION(252693@main): ASSERTION FAILED: results.size() == results.capacity...
Devin Rousso
Reported
2022-07-21 15:26:50 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2022-07-21 16:19:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2641
EWS
Comment 2
2022-07-21 21:55:40 PDT
Committed
252722@main
(700b13b16233): <
https://commits.webkit.org/252722@main
> Reviewed commits have been landed. Closing PR #2641 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-07-21 21:56:16 PDT
<
rdar://problem/97417782
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug