REGRESSION(252693@main): ASSERTION FAILED: results.size() == results.capacity() in Interpreter::getStackTrace https://bugs.webkit.org/show_bug.cgi?id=243082

Reviewed by Yusuke Suzuki.

* Source/JavaScriptCore/interpreter/Interpreter.cpp:
(JSC::GetStackTraceFunctor::GetStackTraceFunctor):
(JSC::GetStackTraceFunctor::operator() const):
(JSC::Interpreter::getStackTrace):
Also skip anyting that isn't `ImplementationVisibility::Public` when counting the number of frames
to capture in the stack trace (whereas 252693@main only did that when actually capturing the frames).
Drive-by: Clean up some of the logic to make it easier to read.

Canonical link: https://commits.webkit.org/252722@main